apps/host/headscale/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: headscale
  labels:
    app: headscale
spec:
  selector:
    app: headscale
  ports:
    - name: http
      port: 80
      targetPort: http
    - name: grpc
      port: 50443
      targetPort: grpc
    - name: metrics
      port: 9090
      targetPort: metrics
